<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">kosliefhebbers</string>
    <string name="search_recipes">Search recipes…</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="log_out">Log Out</string>
    <string name="show_saved_recipes">Show Saved Recipes</string>
    <string name="list_of_saved_recipes">List of saved recipes</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_details_will_appear_here">Recipe details will appear here…</string>
    <string name="recipe_image_desc" />
    <string name="enter_recipe_name_prompt">Please enter a recipe name</string>
    <string name="failed_to_connect">Failed to connect: %1$s</string>
    <string name="empty_response">Empty response from API</string>
    <string name="no_recipes_found">No recipes found for "%1$s"</string>
    <string name="error_parsing_data">Error parsing data from API</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="language">Language</string>
    <string name="back">Back</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>

</resources>